--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 ANYTHINGLLM_URL="http://localhost:3001"
-ANYTHINGLLM_KEY="26SCH3J-DB647DG-PVCCFFT-1A80JKW"
-ANYTHINGLLM_WS="pii-masking"
+ANYTHINGLLM_KEY="-"
+ANYTHINGLLM_WS="-"
